--- a/Vista/Web.config
+++ b/Vista/Web.config
@@ -11,6 +11,7 @@
   </system.web>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <add key="FileFolder" value="/ArchivosAdjuntos/"/>
   </appSettings>
   <system.codedom>
     <compilers>
